SEO: Updated homepage title and meta description for Yoga Teacher Training Rishikesh

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <link rel="icon" type="image/png" href="/favicon.png" />
-    
-    <title>Shivaya Yogashala</title>
+
+    <title>Yoga Teacher Training in Rishikesh | 200, 300 & 500 Hour TTC – Shivaya Yogashala</title>
+
+    <meta name="description" content="Join authentic Yoga Teacher Training in Rishikesh at Shivaya Yogashala. We offer 200, 300, and 500 Hour Multi-Style Yoga TTC and yoga retreats in the spiritual heart of Rishikesh." />
+
+    <meta name="keywords" content="Yoga Teacher Training Rishikesh, 200 Hour Yoga TTC, 300 Hour Yoga TTC, 500 Hour Yoga TTC, Yoga Retreat Rishikesh, Yoga School India" />
+
+    <meta name="author" content="Shivaya Yogashala" />
   </head>
 
   <body>
